welcome.lessons.welcome.array.arrayfront9.ArrayFront9.scala.error
arrayFront9:4: error: not found: value T
	for (x<- 0 to minValue(T)) {
                               ^arrayFront9:11: error: not found: value T
	var i = nums.length ; var y=0; T=
                                       ^